added most recent data

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -3623,7 +3623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3637,7 +3637,16 @@
       "Downloading Batch 5 of 50...\n",
       "Downloading Batch 10 of 50...\n",
       "Downloading Batch 15 of 50...\n",
-      "Downloading Batch 20 of 50...\n"
+      "Downloading Batch 20 of 50...\n",
+      "Downloading Batch 25 of 50...\n",
+      "Downloading Batch 30 of 50...\n",
+      "Downloading Batch 35 of 50...\n",
+      "Downloading Batch 40 of 50...\n",
+      "Downloading Batch 45 of 50...\n",
+      "Downloading Batch 50 of 50...\n",
+      "<<<SCRAPING COMPLETED>>>\n",
+      "Number of posts downloaded: 1232\n",
+      "Number of unique posts: 980\n"
      ]
     }
    ],
@@ -3649,7 +3658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3666,9 +3675,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIST NOW CONTAINS 980 UNIQUE SCRAPED POSTS\n"
+     ]
+    }
+   ],
    "source": [
     "# call function on our data\n",
     "depress_scraped_unique = []\n",
@@ -3677,9 +3694,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>approved_at_utc</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>author_fullname</th>\n",
+       "      <th>saved</th>\n",
+       "      <th>mod_reason_title</th>\n",
+       "      <th>gilded</th>\n",
+       "      <th>clicked</th>\n",
+       "      <th>title</th>\n",
+       "      <th>link_flair_richtext</th>\n",
+       "      <th>...</th>\n",
+       "      <th>parent_whitelist_status</th>\n",
+       "      <th>stickied</th>\n",
+       "      <th>url</th>\n",
+       "      <th>subreddit_subscribers</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>num_crossposts</th>\n",
+       "      <th>media</th>\n",
+       "      <th>is_video</th>\n",
+       "      <th>author_cakeday</th>\n",
+       "      <th>is_suicide</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>We understand that most people who reply immed...</td>\n",
+       "      <td>t2_1t70</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Our most-broken and least-understood rules is ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/d...</td>\n",
+       "      <td>645388</td>\n",
+       "      <td>1.572361e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>Welcome to /r/depression's check-in post - a p...</td>\n",
+       "      <td>t2_64qjj</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Regular Check-In Post</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/e...</td>\n",
+       "      <td>645388</td>\n",
+       "      <td>1.580649e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>I’ve tried everything. Medications, exercise, ...</td>\n",
+       "      <td>t2_sghvg</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>watching everyone else succeed in life while I...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/h...</td>\n",
+       "      <td>645388</td>\n",
+       "      <td>1.592034e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>None</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>There’s no middle ground. I’m never content. O...</td>\n",
+       "      <td>t2_3pdsi85b</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I alternate between not caring about life at a...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/h...</td>\n",
+       "      <td>645388</td>\n",
+       "      <td>1.591977e+09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>None</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>Like why is my brain so mean and tricks me int...</td>\n",
+       "      <td>t2_5wgvq73q</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I hate when I think I’m getting better just to...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/h...</td>\n",
+       "      <td>645388</td>\n",
+       "      <td>1.592019e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 104 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  approved_at_utc   subreddit  \\\n",
+       "0            None  depression   \n",
+       "1            None  depression   \n",
+       "2            None  depression   \n",
+       "3            None  depression   \n",
+       "4            None  depression   \n",
+       "\n",
+       "                                            selftext author_fullname  saved  \\\n",
+       "0  We understand that most people who reply immed...         t2_1t70  False   \n",
+       "1  Welcome to /r/depression's check-in post - a p...        t2_64qjj  False   \n",
+       "2  I’ve tried everything. Medications, exercise, ...        t2_sghvg  False   \n",
+       "3  There’s no middle ground. I’m never content. O...     t2_3pdsi85b  False   \n",
+       "4  Like why is my brain so mean and tricks me int...     t2_5wgvq73q  False   \n",
+       "\n",
+       "  mod_reason_title  gilded  clicked  \\\n",
+       "0             None       0    False   \n",
+       "1             None       0    False   \n",
+       "2             None       0    False   \n",
+       "3             None       0    False   \n",
+       "4             None       0    False   \n",
+       "\n",
+       "                                               title link_flair_richtext  ...  \\\n",
+       "0  Our most-broken and least-understood rules is ...                  []  ...   \n",
+       "1                              Regular Check-In Post                  []  ...   \n",
+       "2  watching everyone else succeed in life while I...                  []  ...   \n",
+       "3  I alternate between not caring about life at a...                  []  ...   \n",
+       "4  I hate when I think I’m getting better just to...                  []  ...   \n",
+       "\n",
+       "  parent_whitelist_status  stickied  \\\n",
+       "0                  no_ads      True   \n",
+       "1                  no_ads      True   \n",
+       "2                  no_ads     False   \n",
+       "3                  no_ads     False   \n",
+       "4                  no_ads     False   \n",
+       "\n",
+       "                                                 url subreddit_subscribers  \\\n",
+       "0  https://www.reddit.com/r/depression/comments/d...                645388   \n",
+       "1  https://www.reddit.com/r/depression/comments/e...                645388   \n",
+       "2  https://www.reddit.com/r/depression/comments/h...                645388   \n",
+       "3  https://www.reddit.com/r/depression/comments/h...                645388   \n",
+       "4  https://www.reddit.com/r/depression/comments/h...                645388   \n",
+       "\n",
+       "    created_utc num_crossposts  media is_video  author_cakeday is_suicide  \n",
+       "0  1.572361e+09              0   None    False             NaN          0  \n",
+       "1  1.580649e+09              0   None    False             NaN          0  \n",
+       "2  1.592034e+09              0   None    False             NaN          0  \n",
+       "3  1.591977e+09              1   None    False             NaN          0  \n",
+       "4  1.592019e+09              0   None    False             NaN          0  \n",
+       "\n",
+       "[5 rows x 104 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# input depression data to dataframe and csv\n",
     "depression = pd.DataFrame(depress_scraped_unique)\n",
@@ -3691,7 +3936,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SCRAPING https://www.reddit.com/r/SuicideWatch.json\n",
+      "--------------------------------------------------\n",
+      "<<<SCRAPING COMMENCED>>>\n",
+      "Downloading Batch 1 of 50...\n",
+      "Downloading Batch 5 of 50...\n",
+      "Downloading Batch 10 of 50...\n",
+      "Downloading Batch 15 of 50...\n",
+      "Downloading Batch 20 of 50...\n",
+      "Downloading Batch 25 of 50...\n"
+     ]
+    }
+   ],
    "source": [
     "# calling scraping on suicidewatch data\n",
     "suicide_scraped = []\n",
@@ -3728,6 +3989,24 @@
     "### Collection Complete\n",
     "This function should be called very often. The point is to improve our dataset and thus improve our model. Since new posts are always made, periodically scraping the subreddits will allow for more comprehensive datasets and thus more comprehensive models. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving models\n",
+    "suicide_watch.to_csv('../data/suicide_watch6-13.csv', index = False)\n",
+    "depression.to_csv('../data/depression6-13.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
