added UIPath for training

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -3934,7 +3934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3949,7 +3949,15 @@
       "Downloading Batch 10 of 50...\n",
       "Downloading Batch 15 of 50...\n",
       "Downloading Batch 20 of 50...\n",
-      "Downloading Batch 25 of 50...\n"
+      "Downloading Batch 25 of 50...\n",
+      "Downloading Batch 30 of 50...\n",
+      "Downloading Batch 35 of 50...\n",
+      "Downloading Batch 40 of 50...\n",
+      "Downloading Batch 45 of 50...\n",
+      "Downloading Batch 50 of 50...\n",
+      "<<<SCRAPING COMPLETED>>>\n",
+      "Number of posts downloaded: 1233\n",
+      "Number of unique posts: 984\n"
      ]
     }
    ],
@@ -3961,9 +3969,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIST NOW CONTAINS 984 UNIQUE SCRAPED POSTS\n"
+     ]
+    }
+   ],
    "source": [
     "# using unique function on suicide data\n",
     "suicide_scraped_unique = []\n",
@@ -3972,9 +3988,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>approved_at_utc</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>author_fullname</th>\n",
+       "      <th>saved</th>\n",
+       "      <th>mod_reason_title</th>\n",
+       "      <th>gilded</th>\n",
+       "      <th>clicked</th>\n",
+       "      <th>title</th>\n",
+       "      <th>link_flair_richtext</th>\n",
+       "      <th>...</th>\n",
+       "      <th>permalink</th>\n",
+       "      <th>parent_whitelist_status</th>\n",
+       "      <th>stickied</th>\n",
+       "      <th>url</th>\n",
+       "      <th>subreddit_subscribers</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>num_crossposts</th>\n",
+       "      <th>media</th>\n",
+       "      <th>is_video</th>\n",
+       "      <th>is_suicide</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>SuicideWatch</td>\n",
+       "      <td>We've been seeing a worrying increase in pro-s...</td>\n",
+       "      <td>t2_1t70</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>New wiki on how to avoid accidentally encourag...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>/r/SuicideWatch/comments/cz6nfd/new_wiki_on_ho...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "      <td>206480</td>\n",
+       "      <td>1.567526e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>SuicideWatch</td>\n",
+       "      <td>If you want to recognise an occasion, please d...</td>\n",
+       "      <td>t2_1t70</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Reminder: Absolutely no activism of any kind i...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>/r/SuicideWatch/comments/d2370x/reminder_absol...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "      <td>206480</td>\n",
+       "      <td>1.568093e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>SuicideWatch</td>\n",
+       "      <td>At the suggestion of my therapist, he recommen...</td>\n",
+       "      <td>t2_6wtc8k1g</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I just joined reddit. I'm 40 years old and sui...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>/r/SuicideWatch/comments/h887xb/i_just_joined_...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "      <td>206480</td>\n",
+       "      <td>1.592057e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>None</td>\n",
+       "      <td>SuicideWatch</td>\n",
+       "      <td>I’ve turned to many places to try and get ri...</td>\n",
+       "      <td>t2_3ml4hngn</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I’m here for the first time. And probably the ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>/r/SuicideWatch/comments/h80fgk/im_here_for_th...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "      <td>206480</td>\n",
+       "      <td>1.592022e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>None</td>\n",
+       "      <td>SuicideWatch</td>\n",
+       "      <td>I'm tired of being haunted by these thoughts. ...</td>\n",
+       "      <td>t2_6wp62fcr</td>\n",
+       "      <td>False</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>I'm 25 and I've had suicidal thoughts since I ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>...</td>\n",
+       "      <td>/r/SuicideWatch/comments/h80snq/im_25_and_ive_...</td>\n",
+       "      <td>no_ads</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "      <td>206480</td>\n",
+       "      <td>1.592024e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 103 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  approved_at_utc     subreddit  \\\n",
+       "0            None  SuicideWatch   \n",
+       "1            None  SuicideWatch   \n",
+       "2            None  SuicideWatch   \n",
+       "3            None  SuicideWatch   \n",
+       "4            None  SuicideWatch   \n",
+       "\n",
+       "                                            selftext author_fullname  saved  \\\n",
+       "0  We've been seeing a worrying increase in pro-s...         t2_1t70  False   \n",
+       "1  If you want to recognise an occasion, please d...         t2_1t70  False   \n",
+       "2  At the suggestion of my therapist, he recommen...     t2_6wtc8k1g  False   \n",
+       "3    I’ve turned to many places to try and get ri...     t2_3ml4hngn  False   \n",
+       "4  I'm tired of being haunted by these thoughts. ...     t2_6wp62fcr  False   \n",
+       "\n",
+       "  mod_reason_title  gilded  clicked  \\\n",
+       "0             None       1    False   \n",
+       "1             None       0    False   \n",
+       "2             None       0    False   \n",
+       "3             None       0    False   \n",
+       "4             None       0    False   \n",
+       "\n",
+       "                                               title link_flair_richtext  ...  \\\n",
+       "0  New wiki on how to avoid accidentally encourag...                  []  ...   \n",
+       "1  Reminder: Absolutely no activism of any kind i...                  []  ...   \n",
+       "2  I just joined reddit. I'm 40 years old and sui...                  []  ...   \n",
+       "3  I’m here for the first time. And probably the ...                  []  ...   \n",
+       "4  I'm 25 and I've had suicidal thoughts since I ...                  []  ...   \n",
+       "\n",
+       "                                           permalink  parent_whitelist_status  \\\n",
+       "0  /r/SuicideWatch/comments/cz6nfd/new_wiki_on_ho...                   no_ads   \n",
+       "1  /r/SuicideWatch/comments/d2370x/reminder_absol...                   no_ads   \n",
+       "2  /r/SuicideWatch/comments/h887xb/i_just_joined_...                   no_ads   \n",
+       "3  /r/SuicideWatch/comments/h80fgk/im_here_for_th...                   no_ads   \n",
+       "4  /r/SuicideWatch/comments/h80snq/im_25_and_ive_...                   no_ads   \n",
+       "\n",
+       "   stickied                                                url  \\\n",
+       "0      True  https://www.reddit.com/r/SuicideWatch/comments...   \n",
+       "1      True  https://www.reddit.com/r/SuicideWatch/comments...   \n",
+       "2     False  https://www.reddit.com/r/SuicideWatch/comments...   \n",
+       "3     False  https://www.reddit.com/r/SuicideWatch/comments...   \n",
+       "4     False  https://www.reddit.com/r/SuicideWatch/comments...   \n",
+       "\n",
+       "   subreddit_subscribers   created_utc  num_crossposts media  is_video  \\\n",
+       "0                 206480  1.567526e+09               0  None     False   \n",
+       "1                 206480  1.568093e+09               0  None     False   \n",
+       "2                 206480  1.592057e+09               0  None     False   \n",
+       "3                 206480  1.592022e+09               0  None     False   \n",
+       "4                 206480  1.592024e+09               0  None     False   \n",
+       "\n",
+       "  is_suicide  \n",
+       "0          1  \n",
+       "1          1  \n",
+       "2          1  \n",
+       "3          1  \n",
+       "4          1  \n",
+       "\n",
+       "[5 rows x 103 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# inputting suicidewatch data into dataframe and csv\n",
     "suicide_watch = pd.DataFrame(suicide_scraped_unique)\n",
@@ -3992,7 +4243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
