--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -1,6 +1,393 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Model\n",
+    "Here we will be creating different models to classify our data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# set configurations\n",
+    "pd.set_option('display.max_columns', 100)\n",
+    "sns.set_style(\"white\")\n",
+    "\n",
+    "# model imports\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, HashingVectorizer, TfidfVectorizer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, roc_auc_score\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_data = pd.read_csv('../data/data_for_model.csv', keep_default_na=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>author</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>is_suicide</th>\n",
+       "      <th>url</th>\n",
+       "      <th>selftext_clean</th>\n",
+       "      <th>title_clean</th>\n",
+       "      <th>author_clean</th>\n",
+       "      <th>selftext_length</th>\n",
+       "      <th>title_length</th>\n",
+       "      <th>megatext_clean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Our most-broken and least-understood rules is ...</td>\n",
+       "      <td>We understand that most people who reply immed...</td>\n",
+       "      <td>SQLwitch</td>\n",
+       "      <td>133</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/d...</td>\n",
+       "      <td>understand people reply immediately op invitat...</td>\n",
+       "      <td>broken least understood rule helper may invite...</td>\n",
+       "      <td>sql witch</td>\n",
+       "      <td>4792</td>\n",
+       "      <td>144</td>\n",
+       "      <td>sql witch understand people reply immediately ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Regular Check-In Post</td>\n",
+       "      <td>Welcome to /r/depression's check-in post - a p...</td>\n",
+       "      <td>circinia</td>\n",
+       "      <td>1644</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/e...</td>\n",
+       "      <td>welcome r depression check post place take mom...</td>\n",
+       "      <td>regular check post</td>\n",
+       "      <td>c irc</td>\n",
+       "      <td>650</td>\n",
+       "      <td>21</td>\n",
+       "      <td>c irc welcome r depression check post place ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I hate it so much when you try and express you...</td>\n",
+       "      <td>I've been feeling really depressed and lonely ...</td>\n",
+       "      <td>TheNewKiller69</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/f...</td>\n",
+       "      <td>feeling really depressed lonely lately job ful...</td>\n",
+       "      <td>hate much try express feeling parent turn arou...</td>\n",
+       "      <td>new killer 69</td>\n",
+       "      <td>1866</td>\n",
+       "      <td>137</td>\n",
+       "      <td>new killer 69 feeling really depressed lonely ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  Our most-broken and least-understood rules is ...   \n",
+       "1                              Regular Check-In Post   \n",
+       "2  I hate it so much when you try and express you...   \n",
+       "\n",
+       "                                            selftext          author  \\\n",
+       "0  We understand that most people who reply immed...        SQLwitch   \n",
+       "1  Welcome to /r/depression's check-in post - a p...        circinia   \n",
+       "2  I've been feeling really depressed and lonely ...  TheNewKiller69   \n",
+       "\n",
+       "   num_comments  is_suicide  \\\n",
+       "0           133           0   \n",
+       "1          1644           0   \n",
+       "2             8           0   \n",
+       "\n",
+       "                                                 url  \\\n",
+       "0  https://www.reddit.com/r/depression/comments/d...   \n",
+       "1  https://www.reddit.com/r/depression/comments/e...   \n",
+       "2  https://www.reddit.com/r/depression/comments/f...   \n",
+       "\n",
+       "                                      selftext_clean  \\\n",
+       "0  understand people reply immediately op invitat...   \n",
+       "1  welcome r depression check post place take mom...   \n",
+       "2  feeling really depressed lonely lately job ful...   \n",
+       "\n",
+       "                                         title_clean   author_clean  \\\n",
+       "0  broken least understood rule helper may invite...      sql witch   \n",
+       "1                                 regular check post          c irc   \n",
+       "2  hate much try express feeling parent turn arou...  new killer 69   \n",
+       "\n",
+       "   selftext_length  title_length  \\\n",
+       "0             4792           144   \n",
+       "1              650            21   \n",
+       "2             1866           137   \n",
+       "\n",
+       "                                      megatext_clean  \n",
+       "0  sql witch understand people reply immediately ...  \n",
+       "1  c irc welcome r depression check post place ta...  \n",
+       "2  new killer 69 feeling really depressed lonely ...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_data.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1897 entries, 0 to 1896\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   title            1897 non-null   object\n",
+      " 1   selftext         1897 non-null   object\n",
+      " 2   author           1897 non-null   object\n",
+      " 3   num_comments     1897 non-null   int64 \n",
+      " 4   is_suicide       1897 non-null   int64 \n",
+      " 5   url              1897 non-null   object\n",
+      " 6   selftext_clean   1897 non-null   object\n",
+      " 7   title_clean      1897 non-null   object\n",
+      " 8   author_clean     1897 non-null   object\n",
+      " 9   selftext_length  1897 non-null   int64 \n",
+      " 10  title_length     1897 non-null   int64 \n",
+      " 11  megatext_clean   1897 non-null   object\n",
+      "dtypes: int64(4), object(8)\n",
+      "memory usage: 178.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Establishing a baseline accuracy is important for evaluating the model's progression. If every prediction was 1, let's see what our accuracy would be."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5166051660516605"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_data['is_suicide'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our baseline accuracy is about 51.7%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selection of Features and Attributes\n",
+    "Here we are attempting to create a model using CountVectorizer and Naive Bayes Model to determine which columns are the best to score and use for our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a function to score different models from different columsn in the dataset\n",
+    "\n",
+    "columns_list = ['column_1', \"column_2\", \"column_3\"]\n",
+    "model = \"CountVec + MultinomialNB\"\n",
+    "df_list=[] \n",
+    "\n",
+    "def multi_modelling(columns_list, model):\n",
+    "    for i in columns_list:\n",
+    "        \n",
+    "        X = model_data[i]\n",
+    "        y = model_data['is_suicide']\n",
+    "        \n",
+    "        # train/test split\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)\n",
+    "        \n",
+    "        cvec = CountVectorizer()\n",
+    "        cvec.fit(X_train)\n",
+    "        \n",
+    "        # creating dataframes\n",
+    "        X_train = pd.DataFrame(cvec.transform(X_train).todense(),\n",
+    "                               columns=cvec.get_feature_names())\n",
+    "        X_test = pd.DataFrame(cvec.transform(X_test).todense(),\n",
+    "                               columns=cvec.get_feature_names())\n",
+    "        \n",
+    "        nb = MultinomialNB()\n",
+    "        nb.fit(X_train,y_train)\n",
+    "        \n",
+    "        # get predictions from model\n",
+    "        pred = nb.predict(X_test)\n",
+    "        \n",
+    "        # create confusion matrix\n",
+    "        tn, fp, fn, tp = confusion_matrix(y_test, pred).ravel()\n",
+    "        \n",
+    "        # calculating AUC\n",
+    "        nb.predict_proba(X_test)\n",
+    "        pred_proba = [i[1] for i in nb.predict_proba(X_test)] \n",
+    "        auc = roc_auc_score(y_test, pred_proba)\n",
+    "\n",
+    "        # classification report\n",
+    "        classi_dict = (classification_report(y_test,pred, output_dict=True))\n",
+    "\n",
+    "        # storing our results\n",
+    "        model_results = {}\n",
+    "        model_results['series used (X)'] = i\n",
+    "        model_results['model'] = model\n",
+    "        model_results['AUC Score'] = auc\n",
+    "        model_results['precision']= classi_dict['weighted avg']['precision']\n",
+    "        model_results['recall (sensitivity)']= classi_dict['weighted avg']['recall']\n",
+    "        model_results['confusion matrix']={\"TP\": tp,\"FP\":fp, \"TN\": tn, \"FN\": fn}\n",
+    "        model_results['train accuracy'] = nb.score(X_train, y_train)\n",
+    "        model_results['test accuracy'] = nb.score(X_test, y_test)\n",
+    "        model_results['baseline accuracy']=0.5166\n",
+    "        model_results['specificity']= tn/(tn+fp)  \n",
+    "        model_results['f1-score']= classi_dict['weighted avg']['f1-score']\n",
+    "        #model_results['support']= classi_dict['weighted avg']['support']\n",
+    "        model_results\n",
+    "        df_list.append(model_results) \n",
+    "\n",
+    "    pd.set_option(\"display.max_colwidth\", 50)\n",
+    "    return (pd.DataFrame(df_list)).round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our initial model, it will be a binary classifier. Once the user gets their classification, they will go to another model that will give them specific support. \n",
+    "\n",
+    "Label Encoding: r/SuicideWatch = 1, r/Depression = 0\n",
+    "\n",
+    "TP: model predicts suicide, and it is correct\n",
+    "\n",
+    "TN: model predicts depression, and it is correct\n",
+    "\n",
+    "FP: model predicts suicide, but it is really depression, not good\n",
+    "\n",
+    "FN: model predicts depression, but they really are suicidal, this is the worst, misses an at risk patient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using the function\n",
+    "columns_list = ['selftext', \"author\", \"title\",'selftext_clean', \"author_clean\", \"title_clean\", \"megatext_clean\"]\n",
+    "model = \"CountVec + MultinomialNB\"\n",
+    "df_list=[]\n",
+    "multi_modelling(columns_list, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
